# python_tutorials

./: .gitignore  LICENSE.md  README.md  SYLLABUS.md  basic_logging.py  calculator.py  custom_exception.py  json_file.py  log_parser.py  oop.py  people.json  sample.txt  task.py  test_calculator.py  user.json
section_01_foundations/ch01_setup_env/: test_greet.py
section_01_foundations/ch02_syntax_core/: calculator.py  test_calculator.py
section_01_foundations/ch03_files_io/: pickle_file.py  yaml_file.py
section_01_foundations/ch03_files_serialization/: config.yaml  csv_file.py  read_file.py
section_01_foundations/ch04_error_handling/: pdb_demo.py  server_log.json  test_log_parser.py
section_01_foundations/ch05_oop/: oop.py  task_manager.py  test_task_manager.py
section_01_foundations/ch06_advanced_oop/: abstract_exporter.py
section_01_foundations/ch08_standard_libs/: archive_logs.py
section_01_foundations/ch09_concurrency_and_proc_mgmt/: compress.py  multiprocessing_basic.py  multiprocessing_manager.py  multiprocessing_no_shared_state.py  multiprocessing_pool.py  output.txt  (+9 more)
section_01_foundations/ch13_python_modules/poetry_example/walidnewaz-test-myapp/: pyproject.toml
section_01_foundations/ch13_python_modules/poetry_example/walidnewaz-test-myapp/src/walidnewaz_test_myapp/: __init__.py
section_01_foundations/ch13_python_modules/pyproject_example/: pyproject.toml
section_01_foundations/ch13_python_modules/pyproject_example/finance_app.egg-info/: PKG-INFO  SOURCES.txt
section_01_foundations/ch14_cli_applications/mycli/: pyproject.toml
section_01_foundations/ch14_cli_applications/mycli/src/mycli/: __init__.py  cli.py  commands.py
(+70 files in other folders)
