[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-app"
version = "0.1.0"
description = "Personal Finance CLI app"
authors = [{ name = "Walid Newaz", email = "walid@example.com" }]
dependencies = ["requests", "pydantic"]

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true