[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycli"
version = "0.1.0"
description = "A simple CLI demo tool"
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
mycli = "mycli.cli:main"